2006-09-26  J. Tang  <tang@jtang.org>

	* demo/basic.tcl: fixed Entry's enter command callback [bug
	1400838]

2006-08-21  J. Tang  <tang@jtang.org>

	* combobox.tcl: unpost after autoposting when another Tk window
	gets the focus; unpost upon hitting the enter key

	* scrollw.tcl: allow toggling of scrollbars [bug 1488712]

	* Tree.html: corrected documentation for Tree::opencmd (callback
	does not append the path to the tree to the command) [bug 1507713]

	* tree.tcl: disable keyboard navigation for empty trees [bug 1514855]

	* tree.tcl: changed '-drawcross allways' to be '-drawcross
	always'; updated documentation

2006-06-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* statusbar.tcl (StatusBar::remove): remove neighboring separator
	when removing the first item. [Bug 1512671]

2006-03-24  J. Tang  <tang@jtang.org>

	* pkgIndex.tcl: removed bogus "ControlFrame" entry [bug 1429405]

	* MainFrame man page: fixed some typos on man page

	* mainframe.tcl: fixed status bar placement when it is re-shown
	after a [showstatusbar none] command [bug 1027568]

2006-03-23  J. Tang  <tang@jtang.org>

	* dynhelp.tcl: if a widget's help balloon is being displayed when
	that widget is destroyed, also destroy the associated balloon [bug
	1448424]

	* listbox.tcl: when deleting an item from the ListBox that has
	dynamic help text, also remove its entry from the help array [bug
	1443461]

2006-02-10  J. Tang  <tang@jtang.org>

	* ProgressDlg man page: note that caller must invoke [update], the
	progressbar will not do it automatically [bug 1105778]

	* progressbar.tcl: -maximum value must now be non-zero, else
	divide by 0 occurs [bug 1145523]; use double() calculations to
	prevent integer overflow with very large -maximum values [bug
	900165]

	* PagesManager man page: clarified [add] behavior and default
	state [bug 1305988]

2006-02-08  J. Tang  <tang@jtang.org>

	* combobox.tcl: allow -autocomplete with uppercase chars [bug
	996569]; added -autopost option [patch 1359041]
